<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.minea.anonymousfeedback.ClientActivity">


    <ImageView
        android:src="@drawable/ic_account_circle_black_24dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp" />
    <TextView
        android:text="@string/client"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/client_mail"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            android:inputType="textEmailAddress"
            android:hint="@string/client_email" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/emailCompany"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_dropdown"
        android:layout_height="40dp"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/cate_spinner_client"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/bg_dropdown"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/message_client"
        android:textSize="20sp"
        android:hint="@string/comment_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RatingBar
        android:id="@+id/rate_client"
        android:numStars="5"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submit_mail"
        android:text="submit"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
</LinearLayout>
