<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.minea.anonymousfeedback.EmployeeActivity">

    <ImageView
        android:src="@drawable/ic_account_circle_black_24dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp" />
    <TextView
        android:text="@string/employee"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/employee_mail"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:ellipsize="end"
        android:inputType="textEmailAddress"
        android:hint="@string/employee_email" />



    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_email_company"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_dropdown"
        android:layout_height="40dp"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/cate_spinner_employee"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_dropdown"
        android:layout_height="40dp"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/message_mail_employee"
        android:textSize="20sp"
        android:hint="@string/comment_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RatingBar
        android:id="@+id/rate_employee"
        android:numStars="5"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/employee_submit"
        android:text="submit"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
</LinearLayout>
